name:                tower-mynewt-examples
version:             0.1.0.0
author:              Peter Jones <pjones@devalot.com>
maintainer:          Peter Jones <pjones@devalot.com>
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

flag werror
  default: False
  description: Pass -Werror to GHC.
  manual: True

executable tower-example-blinky
  main-is: Main.hs
  default-language: Haskell2010
  hs-source-dirs: examples/Blinky
  ghc-options: -Wall

  if flag(werror)
    ghc-options: -Wall -Werror

  build-depends: base >= 4.6
               , ivory
               , ivory-stdlib
               , ivory-backend-c
               , tower-config
               , tower >= 0.9
               , tower-mynewt >= 0.1
