name:                tower-mynewt
version:             0.1.0.0
author:              Peter Jones <pjones@devalot.com>
maintainer:          Peter Jones <pjones@devalot.com>
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

library
  exposed-modules:
    Ivory.OS.Mynewt.Tower.Mynewt

  build-depends: base >= 4.6
               , base-compat >= 0.6
               , template-haskell >= 2.8
               , filepath
               , containers
               , mainland-pretty
               , pretty-show
               , ivory
               , ivory-hw
               , ivory-artifact
               , ivory-stdlib
               , ivory-backend-c
               , tower-config
               , tower >= 0.9

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-orphans
